style: fixes the bugs on alignment and also add fix background and on top of that only section moves

--- a/nav.css
+++ b/nav.css
@@ -2,7 +2,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
+  position: absolute;
   z-index: 100;
   text-transform: uppercase;
   height: 100px;
