--- a/styles.css
+++ b/styles.css
@@ -19,13 +19,14 @@ html::-webkit-scrollbar {
 
 body {
   font-family: "majesty-display", sans-serif;
+  background: url("./assets/home/background-home-desktop.jpg") no-repeat center
+    center fixed;
+  background-size: cover;
+  height: 100dvh;
 }
 
 #home {
-  background: url("./assets/home/background-home-desktop.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100dvh;
+  height: 120dvh;
   width: 100%;
   display: flex;
   justify-content: space-around;
@@ -35,7 +36,6 @@ body {
 #home #leftMain {
   width: 500px;
   margin-top: 100px;
-  margin-left: 50px;
   text-align: justify;
   h1 {
     text-transform: uppercase;
@@ -68,26 +68,24 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 20rem;
+  /* margin-top: 20rem; */
 }
 
 /* destination page */
 #destination {
-  background: url("./assets/destination/background-destination-desktop.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100dvh;
+  min-height: 117dvh;
   width: 100%;
   color: #ffffff;
-  display: flex;
+  display: none;
   justify-content: space-around;
   align-items: center;
   flex-wrap: nowrap;
+  padding-top: 100px;
 }
 
 #leftDestination {
   width: 50%;
-  margin-top: 100px;
+  margin-top: 30px;
   margin-left: 50px;
   display: flex;
   flex-direction: column;
@@ -110,7 +108,6 @@ body {
   padding-left: 10%;
   padding-right: 10%;
   margin-right: 50px;
-  margin-top: 10rem;
 
   #desticontent {
     font-size: 1.5rem;
@@ -159,22 +156,19 @@ body {
 /* Crew page setup  */
 
 #crew {
-  background: url("./assets/crew/background-crew-desktop.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 100dvh;
+  height: 120dvh;
   width: 100%;
   color: #ffffff;
-  display: flex;
+  display: none;
   justify-content: space-around;
   align-items: end;
 }
 #crewright {
   width: 40%;
-  height: 90%;
+  height: 70%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
   img {
     height: 80%;
     width: -moz-fit-content;
@@ -184,17 +178,16 @@ body {
 }
 
 #crewleft {
-  height: 90%;
+  height: 70%;
   width: 40%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: flex-start;
-  padding: 20px;
+  margin-bottom: 3%;
   h1 {
     text-transform: uppercase;
     font-size: 3rem;
-    /* margin-bottom: 50px; */
   }
 }
 
@@ -202,19 +195,19 @@ body {
   display: flex;
   flex-direction: row;
   gap: 20px;
-}
 
-.circle {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  background: #444343;
-  margin-top: 20px;
-}
+  .circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background: #444343;
+    margin-top: 20px;
+  }
 
-.circle:hover,
-.circleactive {
-  background: #ffffff;
+  .circle:hover,
+  .circleactive {
+    background: #ffffff;
+  }
 }
 
 #crewcontent {
@@ -241,24 +234,23 @@ body {
 
 /* Technology Section */
 #technology {
-  height: 100vh;
-  background: url("./assets/technology/background-technology-desktop.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  height: 120vh;
   color: #ffffff;
   padding-top: 10%;
   padding-left: 10%;
+  display: none;
+  .main-subheader {
+    margin-top: 5%;
+  }
 }
 .tech-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  /* border: 2px solid orange; */
-  height: 95%;
+  height: 80%;
   gap: 5%;
   img {
-    width: max-content;
-    height: 100%;
+    height: 90%;
   }
 }
 
@@ -303,14 +295,9 @@ body {
   align-items: center;
   justify-content: space-around;
   background: transparent;
+  margin-bottom: 15px;
 }
 .circle:hover {
   background: #ffffff;
   color: #000000;
-}
-
-#home,
-#destination,
-#crew {
-  /* display: none; */
 }
